--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <div>
   <% @students.each do |student| %>
-    <div><%=link_to student, student.to_s %></div>
+    <div><%=link_to student_path, student.to_s %></div>
   <% end %>
 </div>
